--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -7,18 +7,20 @@
 #logo {
     width: 50%;
     margin-left: 28%;
-    margin-top: -8%;
+    margin-top: -9%;
 }
 
 #form-title {
     font-family: "Myriad Pro Black";
     font-size: 35px;
     color: white;
+    border-bottom: 5px solid #4bb8dc;
+    width: 88%;
 }
 
 #frmLogin {
     margin-left: 33%;
-    margin-top: -11%;
+    margin-top: -12%;
     border: 2px solid;
     width: 33%;
     padding-left: 4%;
@@ -29,8 +31,8 @@
 .txtInfo {
     width: 86%;
     height: 7%;
-    border: 3px solid #4bb8dc;
-    border-radius: 6px;
+    border: 2px solid #4bb8dc;
+    border-radius: 8px;
     font-size: 20px;
     font-family: "Source Sans Pro";
 }
@@ -57,7 +59,19 @@
     font-family: "Myriad Pro Black";
     font-size: 20px;
     color: white;
+    margin-top: -0.5%;
     margin-left: 39%;
+}
+
+#link-forgot {
+    color: #b3aeaee3;
+    text-decoration: none;
+    font-family: "Myriad Pro Black";
+    font-size: 20px;
+}
+
+#link-forgot:hover {
+    text-decoration: underline;
 }
 
 #link-signup {
