--- a/src/main/webapp/Style/PDstyle.css
+++ b/src/main/webapp/Style/PDstyle.css
@@ -163,11 +163,13 @@
 }
 
 .PD-main-menu-total-price {
+    border: none;
     margin: 10px 5px 10px 5px;
-    padding-top: 25px;
+    /* padding-top: 25px; */
     width: 100px;
-    height: 55px;
+    /* height: 55px; */
     text-align: center;
+    font-size: 24px;
     color: white;
     background-color: #a50909;
 }
