--- a/src/main/webapp/Style/CartStyle.css
+++ b/src/main/webapp/Style/CartStyle.css
@@ -18,7 +18,7 @@ body {
     margin: 10px 10px 10px 10px;
     padding: 10px 10px 10px 10px;
     width: 70%;
-    height: 1200px;
+    height: 800px;
     min-width: 800px;
     min-height: 600px;
     grid-template-columns: 60% 40%;
@@ -47,6 +47,7 @@ body {
 
 .Cart-Items{
     border: solid red 1px;
+    overflow: scroll;
 }
 
 .Cart-Items .An-Item {
@@ -152,7 +153,7 @@ body {
     background-color: #a50909;
     color: white;
     font-size: 28px;
-    width: 400px;
+    width: 90%;
     height: 80px;
     text-align: left;
 }
