--- a/src/main/webapp/css/qlpage.css
+++ b/src/main/webapp/css/qlpage.css
@@ -133,3 +133,87 @@ a.dropdown-item-custom:active{
     top: 0;
     width: 100%;
 }
+
+/*Thêm sản phẩm*/
+#procontainer{
+    height: 100%;
+    width: 100%;
+    font-family: SVN-Zero;
+    font-size: 25px;
+    border-top: 1px solid #E6E6E6;
+    color: #60150c;
+    padding: 1em 3em;
+    text-align: center;
+    background-image: url("../Images/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+/*chỉnh giao diện*/
+#editPro{
+    font-family: SVN-Zero;
+    font-size: 25px;
+    background-color: #60150c;
+    text-decoration-color: #E6E6E6;
+    text-align: center;
+}
+
+#addPro{
+    font-family: SVN-Zero;
+    font-size: 25px;
+    background-color: #60150c;
+    text-decoration-color: #E6E6E6;
+    text-align: center;
+}
+
+/*San pham*/
+.glyphicon{
+    margin-right: 5px;
+}
+.thumbnail {
+    margin-bottom: 20px;
+    padding: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+}
+.item.list-group-item {
+    float: none;
+    width: 100%;
+    background-color: #fff;
+    margin-bottom: 10px;
+}
+.item.list-group-item:nth-of-type(odd):hover, .item.list-group-item:hover {
+    background: #428bca;
+}
+.item.list-group-item .list-group-image {
+    margin-right: 10px;
+}
+.item.list-group-item .thumbnail {
+    margin-bottom: 0px;
+}
+.item.list-group-item .caption {
+    padding: 9px 9px 0px 9px;
+}
+.item.list-group-item:nth-of-type(odd) {
+    background: #eeeeee;
+}
+.item.list-group-item:before, .item.list-group-item:after {
+    display: table; content:"";
+}
+.item.list-group-item img {
+    float: left;
+}
+.item.list-group-item:after {
+    clear: both;
+}
+.list-group-item-text {
+    position: center;
+    margin: 0 0 11px;
+}
+.group .list-group-image{
+    height: 200px;
+    width: 300px;
+}
