Thêm dynamic prefix trong đường dẫn đến các file css, chỉnh sửa giao diện và servlet

--- a/src/main/webapp/css/order-detail.css
+++ b/src/main/webapp/css/order-detail.css
@@ -36,3 +36,14 @@
     width: 50%;
     margin-left: 23%;
 }
+
+#link-order {
+    color: blue;
+    font-size: 14px;
+}
+
+#link-order:hover {
+    text-decoration: underline;
+    color: red;
+    background-color: white;
+}
