--- a/src/main/webapp/css/conpage.css
+++ b/src/main/webapp/css/conpage.css
@@ -154,3 +154,25 @@ a.dropdown-item-custom:active{
     text-align: center;
     background: #8e1b0c;
 }
+
+/*button*/
+button {
+    display: inline-block;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: auto;
+}
+
+#close-image img {
+    display: block;
+    height: 50px;
+    width: auto;
+}
+
+#close-CSS {
+    background-image: url( '../Images/gio.png' );
+    height: 50px;
+    width: auto;
+}
