--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -278,3 +278,25 @@ a.dropdown-item-custom:active{
     background-attachment: fixed;
     background-position: center;
 }
+
+/*button*/
+button {
+    display: inline-block;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: auto;
+}
+
+#close-image img {
+    display: block;
+    height: 50px;
+    width: auto;
+}
+
+#close-CSS {
+    background-image: url( '../Images/gio.png' );
+    height: 50px;
+    width: auto;
+}
