8-01-2021: CNPM final report!

--- a/src/main/webapp/Style/CartStyle.css
+++ b/src/main/webapp/Style/CartStyle.css
@@ -1,4 +1,9 @@
-body {
+
+.cart-box {
+    font-family: sans-serif;
+    font-size: 24px;
+    text-align: left;
+    color: brown;
     margin: 10px 10px 10px 10px;
     padding: 10px 10px 10px 10px;
     min-width: 800px;
@@ -7,10 +12,6 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-content: center;
-    font-family: sans-serif;
-    font-size: 24px;
-    text-align: left;
-    color: brown;
 }
 
 .Main-Cart {
