--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -194,8 +194,8 @@ a.dropdown-item-custom:active{
     transition: all .3s ease;
 }
 :hover {
-     background: #60150c;
- }
+    background: #60150c;
+}
 
 .slide {
     width: 100%;
@@ -240,7 +240,8 @@ a.dropdown-item-custom:active{
 /*==Chia cột phần content==*/
 .row {
     overflow: auto;
-    margin: 1.5em auto;
+    margin: 0px 0px;
+    /*margin: 1.5em auto;*/
 }
 .row .col {
     float: left;
@@ -277,4 +278,26 @@ a.dropdown-item-custom:active{
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+}
+
+/*button*/
+button {
+    display: inline-block;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: auto;
+}
+
+#close-image img {
+    display: block;
+    height: 50px;
+    width: auto;
+}
+
+#close-CSS {
+    background-image: url( '../Images/gio.png' );
+    height: 50px;
+    width: auto;
 }
