--- a/src/main/webapp/css/khachpage.css
+++ b/src/main/webapp/css/khachpage.css
@@ -283,5 +283,27 @@ a.dropdown-item-custom:active{
     margin: 0 0 11px;
 }
 .group .list-group-image{
-    width: 100%;
+    height: 200px;
+    width: 300px;
+}
+/*button*/
+button {
+    display: inline-block;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: auto;
+}
+
+#close-image img {
+    display: block;
+    height: 50px;
+    width: auto;
+}
+
+#close-CSS {
+    background-image: url( '../Images/gio.png' );
+    height: 50px;
+    width: auto;
 }
