--- a/src/main/webapp/css/verification.css
+++ b/src/main/webapp/css/verification.css
@@ -1,28 +1,25 @@
-#image-container {
-    float: left;
-    width: 25%;
+#title {
+    margin-top: 1%;
 }
 
-#image {
-    width: 120%;
-}
-
-#message {
-    float: right;
-    width: 70%;
-    padding-top: 6%;
+#textbox {
+    padding-left: 1%;
+    font-size: 18px;
+    height: 35px;
+    width: 10%;
+    border: 2px solid #264cad;
+    border-radius: 5px;
 }
 
 #btnSubmit {
     font-size: 16px;
     font-weight: bold;
-    width: 17%;
+    width: 9%;
     height: 6%;
     border: none;
     border-radius: 15px;
     color: white;
     background-color: #0e840e;
-    margin-top: 1%;
 }
 
 #btnSubmit:hover {
