--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -235,13 +235,14 @@ a.dropdown-item-custom:active{
     background-position: right top;
     background-attachment: fixed;
     overflow: auto;
-    margin: 1.5em auto;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 /*==Chia cột phần content==*/
 .row {
     overflow: auto;
-    margin: 0px 0px;
-    /*margin: 1.5em auto;*/
+    margin-right: 0px;
+    margin-left: 0px;
 }
 .row .col {
     float: left;
